--- a/webapp/front/front/src/app/features/calendar/calendar-page/calendar-page.component.html
+++ b/webapp/front/front/src/app/features/calendar/calendar-page/calendar-page.component.html
@@ -18,7 +18,7 @@
                   text-align: center;
                 "
               >
-                Events
+              {{ "CALENDAR-PAGE.EVENTS" | translate }}
               </p>
               <p style="font-size: 16px">{{ formattedSelectedDate }}</p>
             </div>
