--- a/webapp/front/front/src/app/features/feed/feed-post-preview/feed-post-preview.component.html
+++ b/webapp/front/front/src/app/features/feed/feed-post-preview/feed-post-preview.component.html
@@ -44,7 +44,7 @@
               </div>
 
               <div style="font-size: 12px; color: var(--lighttext)">
-                <span class="post-date" i18n>Posted </span>
+                <span class="post-date" i18n>{{ "FEED-POST-PREVIEW.POSTED" | translate }} </span>
                 <span class="post-date">{{ humanReadableDate }}</span>
               </div>
             </div>
