--- a/webapp/front/front/src/app/features/rejected/rejected-page/rejected-page.component.html
+++ b/webapp/front/front/src/app/features/rejected/rejected-page/rejected-page.component.html
@@ -5,13 +5,13 @@
     <div class="cool-static-container" style="width: 500px; margin-top: 100px">
       <div class="d-flex flex-column justify-content-center align-items-center" style="text-align: center">
         <h3 class="c-primary" style="font-size: 4em; line-height: 1.5em">
-          Hey there!
+          {{ "REJECTED-PAGE.HEY_THERE" | translate }}
         </h3>
         <p style="color: var(--primary); font-size: 30px">
-          It looks like you aren't associated with a neighborhood yet!
+          {{ "REJECTED-PAGE.IT_LOOKS_LIKE_YOU_ARENT_ASSOCIATED_WITH_A_NEIGHBOR" | translate }}
         </p>
         <br />
-        <p>Please select one of the following neighborhoods to continue.</p>
+        <p>{{ "REJECTED-PAGE.HEY_TPLEASE_SELECT_ONE_OF_THE_FOLLOWING_NEIGHBORHOODS_THERE" | translate }}</p>
         <br />
 
         <form [formGroup]="neighborhoodForm" (ngSubmit)="onSubmit()">
@@ -21,23 +21,23 @@
                 [displayFn]="displayNeighborhood" formControlName="neighborhood"
                 [uniqueKey]="'self'"></app-infinite-scroll-select>
               <div *ngIf="submitted && neighborhoodForm.get('neighborhood')?.errors?.['required']" class="error">
-                Neighborhood is required
+                {{ "REJECTED-PAGE.NEIGHBORHOOD_IS_REQUIRED" | translate }}
               </div>
             </div>
           </div>
 
           <!-- Use a button for form submission -->
-          <button type="submit" class="cool-button">Request</button>
+          <button type="submit" class="cool-button">{{ "REJECTED-PAGE.REQUEST" | translate }}</button>
         </form>
 
 
-        <span class="mt-3" style="color: var(--lighttext)">or</span>
+        <span class="mt-3" style="color: var(--lighttext)">{{ "REJECTED-PAGE.OR" | translate }}</span>
         <a (click)="goBackToMainPage()" class="cool-button m-t-40" style="cursor: pointer">
-          Go Back to Login
+          {{ "REJECTED-PAGE.GO_BACK_TO_LOGIN" | translate }}
         </a>
 
         <div *ngIf="isLoading" class="spinner-border text-primary mt-3" role="status">
-          <span class="sr-only">Loading...</span>
+          <span class="sr-only">{{ "REJECTED-PAGE.LOADING" | translate }}</span>
         </div>
       </div>
     </div>
