--- a/webapp/front/front/src/app/features/user-profile/user-profile-page/user-profile-page.component.html
+++ b/webapp/front/front/src/app/features/user-profile/user-profile-page/user-profile-page.component.html
@@ -13,7 +13,7 @@
                 <!-- Instead of JSP form, use a normal file input and handle the event in TS -->
                 <label class="-label" for="file">
                   <span class="glyphicon glyphicon-camera"></span>
-                  <span>Change Profile Image</span>
+                  <span>{{ "USER-PROFILE-PAGE.CHANGE_PROFILE_IMAGE" | translate }}</span>
                 </label>
                 <input
                   id="file"
@@ -36,26 +36,26 @@
         </div>
         <div class="col-md-8">
           <div class="card-block mt-5">
-            <h3 class="p-b-5 f-w-600">Information</h3>
+            <h3 class="p-b-5 f-w-600">{{ "USER-PROFILE-PAGE.INFORMATION" | translate }}</h3>
             <div class="divider mb-3 mt-3"></div>
             <div class="row">
               <div class="col-md-6 mb-2">
-                <p class="m-b-10 f-w-600">Email</p>
+                <p class="m-b-10 f-w-600">{{ "USER-PROFILE-PAGE.EMAIL" | translate }}</p>
                 <h6 class="text-muted f-w-400">{{ currentUser?.email }}</h6>
               </div>
               <div class="col-md-6 mb-2">
-                <p class="m-b-10 f-w-600">Name</p>
+                <p class="m-b-10 f-w-600">{{ "USER-PROFILE-PAGE.NAME" | translate }}</p>
                 <h6 class="text-muted f-w-400">{{ currentUser?.name }}</h6>
               </div>
             </div>
             <div class="divider mb-3 mt-3"></div>
             <div class="row m-t-40">
               <div class="col-md-6 mb-2">
-                <p class="m-b-10 f-w-600">Surname</p>
+                <p class="m-b-10 f-w-600">{{ "USER-PROFILE-PAGE.SURNAME" | translate }}</p>
                 <h6 class="text-muted f-w-400">{{ currentUser?.surname }}</h6>
               </div>
               <div class="col-md-6 mb-2">
-                <p class="m-b-10 f-w-600">User since</p>
+                <p class="m-b-10 f-w-600">{{ "USER-PROFILE-PAGE.USER_SINCE" | translate }}</p>
                 <h6 class="text-muted f-w-400">
                   {{ currentUser?.creationDate }}
                 </h6>
@@ -65,9 +65,9 @@
             <div class="row m-t-40">
               <!-- Dark mode toggle -->
               <div class="col-md-6 mb-2">
-                <p class="m-b-10 f-w-600">Dark Mode</p>
+                <p class="m-b-10 f-w-600">{{ "USER-PROFILE-PAGE.DARK_MODE" | translate }}</p>
                 <div class="controlled">
-                  <h6 class="text-muted f-w-400">Off</h6>
+                  <h6 class="text-muted f-w-400">{{ "USER-PROFILE-PAGE.OFF" | translate }}</h6>
                   <label class="switch">
                     <input
                       class="toggle"
@@ -78,15 +78,15 @@
                     <span class="slider"></span>
                     <span class="card-side"></span>
                   </label>
-                  <h6 class="text-muted f-w-400">On</h6>
+                  <h6 class="text-muted f-w-400">{{ "USER-PROFILE-PAGE.ON" | translate }}</h6>
                 </div>
               </div>
 
               <!-- Language toggle -->
               <div class="col-md-6 mb-2">
-                <p class="m-b-10 f-w-600">Language</p>
+                <p class="m-b-10 f-w-600">{{ "USER-PROFILE-PAGE.LANGUAGE" | translate }}</p>
                 <div class="controlled">
-                  <h6 class="text-muted f-w-400">English</h6>
+                  <h6 class="text-muted f-w-400">{{ "USER-PROFILE-PAGE.ENGLISH" | translate }}</h6>
                   <label class="switch">
                     <input
                       class="toggle"
@@ -97,7 +97,7 @@
                     <span class="slider"></span>
                     <span class="card-side"></span>
                   </label>
-                  <h6 class="text-muted f-w-400">Spanish</h6>
+                  <h6 class="text-muted f-w-400">{{ "USER-PROFILE-PAGE.SPANISH" | translate }}</h6>
                 </div>
               </div>
             </div>
@@ -108,7 +108,7 @@
               class="cool-button cool-small on-bg font-weight-normal p-3"
               style="width: auto"
             >
-              Logout
+            {{ "USER-PROFILE-PAGE.LOGOUT" | translate }}
             </a>
           </div>
         </div>
