--- a/webapp/front/front/src/app/features/admin/admin-create-event/admin-create-event.component.html
+++ b/webapp/front/front/src/app/features/admin/admin-create-event/admin-create-event.component.html
@@ -3,7 +3,7 @@
   style="word-wrap: break-word"
   aria-hidden="true"
 >
-  <h2 class="card-title">Create New Event</h2>
+  <h2 class="card-title">{{ "ADMIN-CREATE-EVENT.CREATE_NEW_EVENT" | translate }}</h2>
   <div class="divider mb-3 mt-3"></div>
 
   <!-- Form for creating a new event -->
@@ -11,7 +11,7 @@
     <div class="form-column" style="margin-top: 1rem">
       <!-- Event Name -->
       <div class="form-group">
-        <label for="name">Name</label>
+        <label for="name">{{ "ADMIN-CREATE-EVENT.NAME" | translate }}</label>
         <input
           id="name"
           type="text"
@@ -26,13 +26,13 @@
           "
           class="form-error"
         >
-          Name is required.
+        {{ "ADMIN-CREATE-EVENT.NAME_IS_REQUIRED" | translate }}
         </div>
       </div>
 
       <!-- Description -->
       <div class="form-group">
-        <label for="description">Description</label>
+        <label for="description">{{ "ADMIN-CREATE-EVENT.DESCRIPTION" | translate }}</label>
         <textarea
           id="description"
           rows="5"
@@ -47,14 +47,14 @@
           "
           class="form-error"
         >
-          Description is required.
+        {{ "ADMIN-CREATE-EVENT.DESCRIPTION_IS_REQUIRED" | translate }}
         </div>
       </div>
 
       <!-- Date -->
       <div class="f-c-c-c w-100">
         <div class="">
-          <label for="date" class="mb-1">Date</label>
+          <label for="date" class="mb-1">{{ "ADMIN-CREATE-EVENT.DATE" | translate }}</label>
           <input
             id="date"
             type="date"
@@ -68,14 +68,14 @@
             "
             class="form-error"
           >
-            Date is required.
+          {{ "ADMIN-CREATE-EVENT.DATE_IS_REQUIRED" | translate }}
           </div>
         </div>
 
         <!-- Start Time and End Time -->
         <div class="f-r-sb-c">
           <div class="col-6 ps-0">
-            <label for="startTime" class="mb-1">Start Time</label>
+            <label for="startTime" class="mb-1">{{ "ADMIN-CREATE-EVENT.START_TIME" | translate }}</label>
             <input
               id="startTime"
               type="time"
@@ -84,7 +84,7 @@
             />
           </div>
           <div class="col-6 pe-0">
-            <label for="endTime" class="mb-1">End Time</label>
+            <label for="endTime" class="mb-1">{{ "ADMIN-CREATE-EVENT.END_TIME" | translate }}</label>
             <input
               id="endTime"
               type="time"
@@ -99,7 +99,7 @@
             (eventForm.dirty || eventForm.touched)
           "
         >
-          <p class="error">Start Time must be earlier than End Time</p>
+          <p class="error">{{ "ADMIN-CREATE-EVENT.START_TIME_MUST_BE_EARLIER_THAN_END_TIME" | translate }}</p>
         </div>
       </div>
     </div>
@@ -111,7 +111,7 @@
         class="cool-button cool-small on-bg w-25 font-weight-bolder"
         [disabled]="eventForm.invalid"
       >
-        Create
+      {{ "ADMIN-CREATE-EVENT.CREATE" | translate }}
       </button>
     </div>
   </form>
