--- a/webapp/front/front/src/app/features/amenities/amenities-reservations-page/amenities-reservations-page.component.html
+++ b/webapp/front/front/src/app/features/amenities/amenities-reservations-page/amenities-reservations-page.component.html
@@ -13,18 +13,18 @@
         <!-- If no amenities -->
         <div class="no-posts-found" *ngIf="amenities?.length === 0">
           <i class="circle-icon fa-solid fa-magnifying-glass"></i>
-          Amenities not found
+          {{ "AMENITIES-RESERVATIONS-PAGE.AMENITIES_NOT_FOUND" | translate }}
         </div>
 
         <!-- If amenities are available -->
         <div *ngIf="amenities?.length > 0">
-          <h2>Make a Reservation</h2>
+          <h2>{{ "AMENITIES-RESERVATIONS-PAGE.MAKE_A_RESERVATION" | translate }}</h2>
           <div class="divider"></div>
 
           <form [formGroup]="reservationForm" (ngSubmit)="onSubmit()">
             <div class="col-md-12">
               <label for="amenityUrl" class="mt-3 mb-2"
-                >Select an Amenity</label
+                >{{ "AMENITIES-RESERVATIONS-PAGE.SELECT_AN_AMENITY" | translate }}</label
               >
               <app-infinite-scroll-select
                 [theme]="'default'"
@@ -45,12 +45,12 @@
                   reservationForm.get('amenityUrl')?.touched
                 "
               >
-                Please select an amenity.
+              {{ "AMENITIES-RESERVATIONS-PAGE.PLEASE_SELECT_AN_AMENITY" | translate }}
               </p>
             </div>
 
             <div class="col-md-12">
-              <label for="date" class="mt-3 mb-1">Choose Date</label>
+              <label for="date" class="mt-3 mb-1">{{ "AMENITIES-RESERVATIONS-PAGE.CHOOSE_DATE" | translate }}</label>
               <input
                 type="date"
                 id="date"
@@ -65,7 +65,7 @@
                   reservationForm.get('date')?.touched
                 "
               >
-                Please choose a valid date.
+              {{ "AMENITIES-RESERVATIONS-PAGE.PLEASE_CHOOSE_A_VALID_DATE" | translate }}
               </p>
             </div>
 
@@ -76,7 +76,7 @@
                   class="cool-button cool-small on-bg w-25 font-weight-bold"
                   style="height: 40px"
                 >
-                  See Times
+                {{ "AMENITIES-RESERVATIONS-PAGE.SEE_TIMES" | translate }}
                 </button>
               </div>
             </div>
@@ -103,7 +103,7 @@
           <div class="cool-table w-100">
             <table class="table-striped w-100">
               <tr>
-                <th>Amenity Hours</th>
+                <th>{{ "AMENITIES-RESERVATIONS-PAGE.AMENITY_HOURS" | translate }}</th>
                 <!-- Use the abbreviated day name -->
                 <th *ngFor="let d of uniqueDays">
                   {{ getAbbreviatedDay(d) }}
