--- a/webapp/front/front/src/app/features/calendar/calendar-event-page/calendar-event-page.component.html
+++ b/webapp/front/front/src/app/features/calendar/calendar-event-page/calendar-event-page.component.html
@@ -22,20 +22,20 @@
               <section class="f-c-c-s">
                 <div class="info-item">
                   <i class="fa fa-calendar me-2" aria-hidden="true"></i>
-                  <span class="info-label me-2">Date:</span>
+                  <span class="info-label me-2">{{ "CALENDAR-EVENT-PAGE.DATE" | translate }}</span>
                   <span class="info-value">{{ event?.eventDate }}</span>
                 </div>
                 <div class="info-item">
                   <i class="fa fa-clock-o me-2" aria-hidden="true"></i>
-                  <span class="info-label me-2">Time:</span>
+                  <span class="info-label me-2">{{ "CALENDAR-EVENT-PAGE.TIME" | translate }}</span>
                   <span class="info-value"
-                    >From {{ event?.startTime }} to {{ event?.endTime }}</span
+                    >{{ "CALENDAR-EVENT-PAGE.FROM__EVENTSTARTTIME__TO__EVENTENDTIME_" | translate: {startTime: event?.startTime, endTime: event?.endTime} }}</span
                   >
                 </div>
                 <div class="info-item">
                   <i class="fa fa-hourglass-half me-2" aria-hidden="true"></i>
-                  <span class="info-label me-2">Duration:</span>
-                  <span class="info-value">{{ event?.duration }} Minutes</span>
+                  <span class="info-label me-2">{{ "CALENDAR-EVENT-PAGE.DURATION" | translate }}</span>
+                  <span class="info-value">{{ "CALENDAR-EVENT-PAGE._EVENTDURATION__MINUTES" | translate: {duration: event?.duration} }}</span>
                 </div>
               </section>
             </div>
@@ -51,7 +51,7 @@
               class="accept-button outlined"
               style="margin-top: 5px; font-size: 12px"
             >
-              Attend
+            {{ "CALENDAR-EVENT-PAGE.ATTEND" | translate }}
             </button>
             <button
               *ngIf="willAttend"
@@ -59,7 +59,7 @@
               class="ignore-button outlined"
               style="margin-top: 5px; font-size: 12px"
             >
-              Unattend
+            {{ "CALENDAR-EVENT-PAGE.UNATTEND" | translate }}
             </button>
           </div>
         </div>
@@ -67,7 +67,7 @@
         <!-- Attendees Section -->
         <div class="post-info">
           <h3 class="" style="color: var(--text)">
-            Attendees ({{ event?.attendeesCount }})
+            {{ "CALENDAR-EVENT-PAGE.ATTENDEES__EVENTATTENDEESCOUNT_" | translate: {attendeesCount: event?.attendeesCount} }}
           </h3>
           <div class="divider"></div>
 
@@ -77,7 +77,7 @@
             class="postcard-description"
             style="color: var(--lighttext)"
           >
-            <p>No attendees have registered for this event yet.</p>
+            <p>{{ "CALENDAR-EVENT-PAGE.NO_ATTENDEES_HAVE_REGISTERED_FOR_THIS_EVENT_YET" | translate }}</p>
           </div>
 
           <!-- Attendees List -->
