--- a/webapp/front/front/src/app/features/feed/feed-page/feed-page.component.html
+++ b/webapp/front/front/src/app/features/feed/feed-page/feed-page.component.html
@@ -32,7 +32,7 @@
         <ng-template #noPostsFound>
           <div class="no-posts-found">
             <i class="circle-icon fa-solid fa-magnifying-glass"></i>
-            <span i18n>Posts not found</span>
+            <span i18n>{{ "FEED-PAGE.POSTS_NOT_FOUND" | translate }}</span>
           </div>
         </ng-template>
         <!-- <c:choose>
