--- a/webapp/front/front/src/app/features/feed/feed-post-content/feed-post-content.component.html
+++ b/webapp/front/front/src/app/features/feed/feed-post-content/feed-post-content.component.html
@@ -8,7 +8,7 @@
             {{ post.channel }}
           </span>
           <span style="font-size: 12px; font-weight: normal" class="ms-1">
-            - Posted by
+            {{ "FEED-POST-CONTENT._POSTED_BY" | translate }}
             <img
               [src]="authorImageSafeUrl"
               class="small-profile-picture mb-1"
@@ -105,7 +105,7 @@
               class="cool-action-button rounded cancel-button p-2"
               (click)="onCancel()"
             >
-              Cancel
+            {{ "FEED-POST-CONTENT.CANCEL" | translate }}
             </button>
 
             <button
@@ -113,7 +113,7 @@
               class="cool-action-button rounded comment-button ms-1"
               [disabled]="commentForm.invalid"
             >
-              Comment
+            {{ "FEED-POST-CONTENT.COMMENT" | translate }}
             </button>
           </div>
         </div>
@@ -143,7 +143,7 @@
     </div>
     <ng-template #noComments>
       <div class="cool-comment">
-        <div class="comment-body">No comments</div>
+        <div class="comment-body">{{ "FEED-POST-CONTENT.NO_COMMENTS" | translate }}</div>
       </div>
     </ng-template>
 
